---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1080                                 -
---------------------------------------------
- 2021-02-27                                -
---------------------------------------------
.: WSM: Task: Update "Ready" status in flowchart (WSM-306)
.: WSM; Task: Padding in mobile size (WSM-302)

---------------------------------------------
- 2021-02-26                                -
---------------------------------------------
.: WSM: Task: Better adding invoice UI (WSM-302)

---------------------------------------------
- 2021-02-24                                -
---------------------------------------------
.: WSM: Task: Adding invoice tracking dot (WSM-305)
.: WSM: Task: Add ready status in invoice track (WSM-306)
.: WSM: Task: Update Invoice UI in mobile (WSM-307)

---------------------------------------------
- 2021-02-22                                -
---------------------------------------------
.: WSM: Task: Create price page (WSM-186)

---------------------------------------------
- 2021-02-15                                -
---------------------------------------------
.: WSM: Task: Toast maximum message when maximum number of uploading images is reached (WSM-161)

- v1.0.1070                                 -
---------------------------------------------
- 2021-02-03                                -
---------------------------------------------
.: WSM: BugFix: Timezone issue when requesting of today analysis (WSM-301)

---------------------------------------------
- 2021-02-02                                -
---------------------------------------------
.: WSM: BugFix: Update to support timezone (WSM-270)

---------------------------------------------
- 2021-01-31                                -
---------------------------------------------
.: WSM: BugFix: Update UI in item list (WSM-286)