@@ -44,6 +44,17 @@
                 </div>
                 <button class="btn btn-sm btn-setup ml-lg-5 mt-3 mt-lg-0 ml-auto" (click)="openQRcodeModal(url)">View QR code</button>
             </li>
+            <li class="row no-gutters setup-list-item">
+                <span class="setup-list-item-icon d-none d-lg-block fas fa-crown"></span>
+                <div class="mr-lg-auto col-lg-auto">
+                    <div class="row no-gutters mb-1 d-flex align-items-center">
+                        <span class="setup-list-item-sm-icon d-inline-block d-lg-none fas fa-crown"></span>
+                        <p class="setup-list-item-label">Upgrade to Premium</p>
+                    </div>
+                    <p class="setup-list-item-text"><span class="font-weight-bold">Free</span> to upgrade to Premium package now</p>
+                </div>
+                <button class="btn btn-sm btn-setup ml-lg-5 mt-3 mt-lg-0 ml-auto" (click)="upgradeToPremium()">Upgrade</button>
+            </li>
         </ul>
     </div>
 </div>
