@@ -7,7 +7,8 @@
 - 2021-02-27                                -
 ---------------------------------------------
 .: WSM: Task: Update "Ready" status in flowchart (WSM-306)
-.: WSM; Task: Padding in mobile size (WSM-302)
+.: WSM: Task: Padding in mobile size (WSM-302)
+.: WSM: Task: Add selection in home to upgrade to Premium (WSM-186)
 
 ---------------------------------------------
 - 2021-02-26                                -
